<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AjouterSociete">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Menu Generale"
        android:background="@color/teal_200"
        android:textSize="35dp"
        android:textAlignment="center"
        android:id="@+id/t1"
        android:textColor="@color/purple_500"></TextView>

    <EditText
        android:id="@+id/e1"
        style="@style/edittext"
        android:layout_below="@+id/t1"
        android:hint="@string/h1">

    </EditText>

    <EditText
        android:id="@+id/e2"
        style="@style/edittext"
        android:layout_below="@+id/e1"
        android:hint="@string/h2">

    </EditText>

    <EditText
        style="@style/edittext"
        android:layout_below="@+id/e2"
        android:id="@+id/e3"
        android:hint="@string/h3">

    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e3">
        <Button
            style="@style/btn"
            android:layout_weight="1"
            android:text="@string/enr"
            android:onClick="enregistrer">
        </Button>
        <Button
            style="@style/btn"
            android:layout_weight="1"
            android:text="@string/ann"
            android:onClick="annuler">
        </Button>
    </LinearLayout>

</RelativeLayout>