<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Menu Generale"
        android:background="@color/teal_200"
        android:textSize="35dp"
        android:textAlignment="center"
        android:textColor="@color/purple_500"></TextView>
    <Button
        style="@style/btn"
        android:id="@+id/btn1"
        android:text="@string/btnmenu1"
        android:onClick="affichage"/>
    <Button
        style="@style/btn"
        android:id="@+id/btn2"
        android:text="@string/btnmenu2"
        android:onClick="affichage"/>
    <Button
        style="@style/btn"
        android:id="@+id/btn3"
        android:text="@string/btnmenu3"
        android:onClick="affichage"/>

</LinearLayout>